# tribalized

./: Cargo.toml  README.md  WORLD.md
src/: main.rs
src/ui/: main_screen.rs  mod.rs  world.rs
src/world/: mod.rs  world.rs
