[package]
name = "tribalized"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.25"
rand = "0.8.5"
tokio = { version = "1.35", features = ["rt-multi-thread", "time"] }
serde = { version = "1", features = ["derive"] }
